<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_key_enable_dfreminder"
        android:title="@string/pref_title_enable_dfreminder" />

    <ListPreference
        android:defaultValue="@string/pref_remind_frequency_default"
        android:entries="@array/pref_remind_frequency_titles"
        android:entryValues="@array/pref_remind_frequency_values"
        android:key="@string/pref_key_remind_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_remind_frequency" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="@string/pref_key_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <ListPreference
        android:defaultValue="Pattern"
        android:entries="@array/pref_vibrate_list_titles"
        android:entryValues="@array/pref_vibrate_list_values"
        android:key="@string/pref_key_vibrate_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_vibrate_list" />

    <EditTextPreference
        android:key="@string/pref_key_vibrate_pattern"
        android:title="@string/pref_title_vibrate_pattern"
        android:defaultValue="@string/pref_default_vibrate_pattern"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1"
        android:digits="1234567890," />

    <Preference
        android:key="@string/pref_key_try"
        android:title="@string/pref_title_try"
        android:defaultValue=""
        android:singleLine="true"
        android:maxLines="1" />

    <com.formichelli.dfreminder.TimePreference
        android:key="@string/pref_key_time_start"
        android:title="@string/pref_title_time_start"
        android:defaultValue="00:00"/>

    <com.formichelli.dfreminder.TimePreference
        android:key="@string/pref_key_time_end"
        android:title="@string/pref_title_time_end"
        android:defaultValue="00:00"/>
</PreferenceScreen>
